<resources>
    <string name="app_name">Laraprac1</string>
    <string name="y1">Pantalla de Datos</string>
    <string name="y2">Ingenierìa en Sistemas Computacionales</string>
    <string name="y3">Materia: Introduccion a Dispositivos Moviles</string>
    <string name="y4">Alumna: Yoselin Lara Estrada</string>
    <string name="y5">Grupo: 7S11</string>
    <string name="y6">tesoem</string>
</resources>
